server.log
C:\Users\squat\repos\sandironratio-node\chambers\hex-chamber-manager.ts:14
import { hexStore, Chamber } from '../db/hex-store.js';
                   ^

SyntaxError: The requested module '../db/hex-store.js' does not provide an export named 'Chamber'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.20.0
